--- a/Dice-Game/package.json
+++ b/Dice-Game/package.json
@@ -11,11 +11,9 @@
   },
   "dependencies": {
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
-    
-
+    "react-dom": "^18.2.0",
+    "styled-components": "^6.1.8"
   },
-
   "resolutions": {
     "styled-components": "^6.1.8"
   },
@@ -27,6 +25,6 @@
     "eslint-plugin-react": "^7.34.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
-    "vite": "^5.1.6"
+    "vite": "^5.2.2"
   }
 }
